# homer_robot_face

./: CMakeLists.txt  README.md  package.xml  rosdep.yaml  tracks.yaml
cmake/: FindEST.cmake  FindFestival.cmake
config/: config.cfg  config_GiGo.cfg  robot_face_default.yaml
homer_mary_tts/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
homer_mary_tts/cfg/: MaryTTS.cfg
homer_mary_tts/config/: mary_tts.yaml
homer_mary_tts/doc/: Makefile  conf.py  index.rst  mary_tts.rst  modules.rst
homer_mary_tts/launch/: homer_flite.launch  homer_mary.launch
homer_mary_tts/src/: flite_tts.py  mary_tts.py
homer_robot_face/: CHANGELOG.rst  CMakeLists.txt  package.xml
homer_robot_face/config/: config.cfg
homer_robot_face/include/homer_robot_face/: FestivalGenerator.h  FestivalSynthesizer.h  ImageDisplay.h  MainWindow.h  QtRosNode.h  TextOutDisplay.h
homer_robot_face/launch/: robot_face.launch
homer_robot_face/mesh/: GiGo.mesh  Lisa.material
homer_robot_face/mesh/BlenderFiles/: gigo-talkinghead-9.blend
homer_robot_face/msg/: DisplayImage.msg
homer_robot_face/src/: FestivalGenerator.cpp  FestivalSynthesizer.cpp  ImageDisplay.cpp  MainWindow.cpp  QtRosNode.cpp  RotationLabel.cpp  TalkingHead.cpp  TextOutDisplay.cpp
homer_tts/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
homer_tts/action/: Speak.action
homer_tts/cfg/: MaryTTS.cfg
homer_tts/include/homer_tts/: speak_node.h
homer_tts/launch/: homer_flite.launch  homer_mary.launch  homer_pico2wave.launch
homer_tts/src/: flite_tts.py  mary_tts.py  pico_tts.py  speak_node.cpp
include/homer_robot_face/: Config.h  QtRosNode.h  TalkingHead.h
launch/: robot_face.launch
robot_face/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
robot_face/cmake/: UsePackage.cmake
robot_face/config/: config.cfg  config_Lisa.cfg
robot_face/include/: Config.h  Data.h  FestivalGenerator.h  FestivalSynthesizer.h  ImageDisplay.h  MainWindow.h  RotationLabel.h  TalkingHead.h  TextOutDisplay.h  TextProcessor.h
robot_face/launch/: robot_face.launch  robot_face_android_synthesis.launch
robot_face/mesh/: GiGo.material  Lisa.mesh
robot_face/mesh/BlenderFiles/: lisa-talkinghead-9.blend
robot_face/msg/: ImageFileDisplay.msg
robot_face/src/: FestivalGenerator.cpp  FestivalSynthesizer.cpp  ImageDisplay.cpp  MainWindow.cpp  QtRosNode.cpp  RotationLabel.cpp  TalkingHead.cpp  TextOutDisplay.cpp  TextProcessor.cpp  main.cpp
src/: TalkingHead.cpp  TextProcessor.cpp  main.cpp
