<package>
	<name>robot_face</name>
	<version>1.0.2</version>
	<description> 
		An application to display a talking head on your robot for human robot interaction.
	</description>
	<author>AGAS/agas@uni-koblenz.de, Julian Giesen/jgiesen@uni-koblenz.de, David Gossow</author>
	<maintainer email="raphael@uni-koblenz.de">Raphael Memmesheimer</maintainer>
	<license>LGPLv3</license>
	<!--<logo>http://www.uni-koblenz-landau.de/koblenz/fb4/institute/icv/agpaulus/logo_institut.jpg</logo>-->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>genmsg</build_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>roslib</run_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>libqt4-dev</build_depend>
	<run_depend>libqt4-dev</run_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
	<build_depend>genmsg</build_depend>

	<build_depend>roslang</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>
	<build_depend>cv_bridge</build_depend>
	<run_depend>cv_bridge</run_depend>
	<build_depend>sensor_msgs</build_depend>
	<run_depend>sensor_msgs</run_depend>

	<!--<build_depend>FestivalSynthesizer</build_depend>-->
	<!--<run_depend>FestivalSynthesizer</run_depend>-->
	<!--<run_depend>ogre</run_depend>-->

	<build_depend>roscpp_serialization</build_depend>
	<run_depend>roscpp_serialization</run_depend>
</package>


